# osero

./: Cargo.toml
src/: main.rs  osero.rs
static/: index.html  script.js  style.css
