[package]
name = "rust-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web="3"
actix-cors="*"
actix-files="*"
actix-web-actors="3"
serde = "1.0"
serde_json = "1.0"
once_cell="*"